# Neurus

./: .gitattributes  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  neurus_err.txt  neurus_out.txt  setup.ps1  stderr.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: architecture.instructions.md  build.instructions.md  data-resource.instructions.md  editor.instructions.md  git-workflow.instructions.md  renderer.instructions.md  style.instructions.md  test.instructions.md  ui-system.instructions.md
.github/workflows/: ci.yml
.opencode/: package.json
cmake/: CompileShaders.cmake  SetVSStartup.ps1  SpvToHeader.cmake
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-06-19/: graph.json
res/: default.neurus.json  shadow.neurus.json
res/shaders/: c2e.comp  e2c.comp  importance_samp.comp  irradiance_conv.comp  pbr_lighting.comp  skybox.vert  triangle.vert
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt  VulkanContext.cpp  VulkanContext.h
src/asset/: CMakeLists.txt  ImageData.cpp  ImageData.h  MeshData.cpp
src/core/: CMakeLists.txt  Graph.h  Log.h  Parameters.h  Types.h
src/data/: CMakeLists.txt  GPUResource.cpp  GPUResource.h  GPUResourceCache.cpp  GPUResourceCache.h  ImageData.h  MeshData.h  TextureData.cpp  TextureData.h
src/editor/: CMakeLists.txt  CameraController.cpp  CameraController.h  Context.cpp  Context.h  Editor.cpp  Editor.h  EditorContext.cpp  EditorContext.h  EventBus.cpp  EventBus.h  Input.cpp  Input.h  SelectionController.cpp  SelectionController.h  SelectionManager.h
src/editor/controllers/: CameraController.cpp  CameraController.h  Controllers.h
src/editor/events/: CameraEvents.h  EditorEvents.h  EventBus.h  UIEvents.cpp  UIEvents.h
src/project/: CMakeLists.txt  Project.cpp  Project.h  TypeRegistration.cpp
src/render/: AttachmentManager.cpp  AttachmentManager.h  Barrier.cpp  Barrier.h  BufferLayout.cpp  BufferLayout.h  CMakeLists.txt  CommandBuffer.h  ComputePipelineBuilder.cpp  ComputePipelineBuilder.h  DeferredRenderer.cpp  DeferredRenderer.h  DescriptorManager.cpp  DescriptorManager.h  GeometryPass.cpp  GeometryPass.h  Image.cpp  Image.h  LightingPass.cpp  LightingPass.h  Material.cpp  Material.h  MeshBindings.cpp  MeshData.cpp  PipelineBuilder.cpp  PipelineBuilder.h  QVulkanRenderer.cpp  QVulkanRenderer.h  RenderCache.cpp  RenderCache.h  RenderContext.h  RenderPassManager.cpp  RenderPassManager.h  Renderer.cpp  Renderer.h  SSAOPass.cpp  SSAOPass.h  Screenshot.cpp  Screenshot.h  ShaderLib.cpp  (+18 more)
src/render/buffers/: Buffer.cpp  Buffer.h  BufferLayout.h  GPUBuffer.cpp  GPUBuffer.h  IndexBuffer.cpp  IndexBuffer.h  StagingBuffer.cpp  StagingBuffer.h  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/render/passes/: AttachmentManager.cpp  AttachmentManager.h  CMakeLists.txt  ComputePass.h  GeometryPass.cpp  GeometryPass.h  IBLPass.cpp  IBLPass.h  LightingPass.cpp  LightingPass.h  Pass.cpp  Pass.h  PassContext.h  RenderCache.cpp  RenderCache.h  RenderContext.h  RenderPassManager.cpp  SSAOPass.cpp  SSAOPass.h  ShadowDepthPass.cpp  ShadowDepthPass.h  ShadowEvalPass.cpp  ShadowEvalPass.h  ShadowIntensityPass.cpp  ShadowIntensityPass.h  SyncObjects.h
src/render/shaders/: ShaderModule.cpp  ShaderModule.h  ShaderProgram.cpp  ShaderProgram.h
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  DebugLine.cpp  DebugLine.h  DebugPoints.cpp  DebugPoints.h  DefaultScene.cpp  DefaultScene.h  Environment.cpp  Environment.h  GlmSerialization.h  Light.cpp  Light.h  Material.cpp  Mesh.cpp  Mesh.h  MeshBindings.cpp  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Transform.h  UID.cpp  UID.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  NeurusMainWindow.cpp  NeurusMainWindow.h  OutlinerPanel.cpp  OutlinerPanel.h  PropertyEditor.cpp  PropertyEditor.h  VulkanWidget.cpp  VulkanWidget.h  VulkanWindow.cpp  VulkanWindow.h
src/ui/qml/: main.qml
test/: CMakeLists.txt  TestVulkanFixture.cpp  test_main.cpp
test/asset/: test_imagedata.cpp  test_meshdata.cpp
test/core/: test_graph.cpp
test/data/: test_gpu_resource_cache.cpp
test/editor/: test_camera_controller.cpp  test_context.cpp  test_editor_context.cpp  test_event_bus.cpp  test_event_bus_expanded.cpp  test_event_bus_typed.cpp  test_input.cpp  test_scene_status.cpp  test_selection.cpp
test/project/: test_default_project.cpp  test_project_roundtrip.cpp
test/render/: test_attachments.cpp  test_buffer.cpp  test_buffers.cpp  test_commandbuffer.cpp  test_compute_pipeline.cpp  test_deferred_shading.cpp  test_descriptor.cpp  test_gbuffer.cpp  test_golden_image.cpp  test_ibl.cpp  test_ibl_render.cpp  test_image.cpp  test_lighting.cpp  test_material.cpp  test_mesh.cpp  test_meshdata.cpp  test_model_render.cpp  test_multilight_shadow.cpp  test_pipeline.cpp  test_renderer.cpp  test_renderpass.cpp  test_scene_wiring.cpp  test_screenshot.cpp  test_shader_module.cpp  test_shader_program.cpp  test_shadow_cubemap.cpp  test_shadow_cubemap_depth.cpp  test_shadow_cubemap_depth_verify.cpp  test_shadow_deterministic.cpp  test_shadow_intensity.cpp  test_shadow_render.cpp  test_ssao.cpp  test_swapchain.cpp  test_syncobjects.cpp  test_texture.cpp  test_vulkan_buffer.cpp  test_vulkan_context.cpp  test_vulkanimage.cpp
test/render/reference/ibl/: test_gradient.hdr
test/render/reference/ibl/faces.hdr/: cube_face_+X.hdr  cube_face_+Y.hdr  cube_face_+Z.hdr  cube_face_-X.hdr  cube_face_-Y.hdr  cube_face_-Z.hdr
test/scene/: test_camera.cpp  test_debug.cpp  test_light.cpp  test_mesh.cpp  test_scene.cpp  test_scene_const_access.cpp  test_scene_integration.cpp  test_sprite.cpp  test_transform.cpp  test_uid.cpp
test/shared/: TestCornellBox.h  TestDeferredScene.h  TestMultiShadow.h  TestReferenceImage.h  TestSimpleShadow.h  TestVulkanFixture.h  TestVulkanShared.cpp  TestVulkanShared.h  test_main.cpp
(+14 files in other folders)
